updated swagger security
