# storage/api-docs/api-docs.json
@@ -137,7 +137,7 @@
                 },
                 "security": [
                     {
-                        "bearer": []
+                        "bearerAuth": []
                     }
                 ]
             }
@@ -183,12 +183,12 @@
                 },
                 "security": [
                     {
-                        "bearer": []
+                        "bearerAuth": []
                     }
                 ]
             }
         },
-        "/api/getBitcoinById": {
+        "/api/getBitcoinById/{id}": {
             "get": {
                 "tags": [
                     "getById"
@@ -198,12 +198,13 @@
                 "operationId": "getBitcoinById",
                 "parameters": [
                     {
-                        "name": "bitcoinId",
+                        "name": "id",
                         "in": "path",
                         "description": "ID of bitcoin trade",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "type": "integer",
+                            "format": "int64"
                         },
                         "example": "1"
                     }
@@ -238,7 +239,7 @@
                 },
                 "security": [
                     {
-                        "bearer": []
+                        "bearerAuth": []
                     }
                 ]
             }
@@ -292,7 +293,13 @@
             }
         }
     },
-    "security": [
-        []
-    ]
+    "security": {
+        "bearer": {
+            "type": "http",
+            "description": "Authorization token obtained from logging in.",
+            "name": "Authorization",
+            "in": "header",
+            "scheme": "bearer"
+        }
+    }
 }
